# ModernFastAPI

./: .env.example  .gitignore  README.md  pydantic_example.py  pyproject.toml  requirements.txt
FastCalculatorAPI/: api_test.http  main.py
RealisticWeatherAPI/: main.py
RealisticWeatherAPI/api/: weather_api.py
RealisticWeatherAPI/models/: location.py  report.py  validation.py
RealisticWeatherAPI/services/: openweather_service.py  report_service.py
RealisticWeatherAPI/templates/home/: index.html
RealisticWeatherAPI/templates/shared/: base.html
RealisticWeatherAPI/test_rest_api/: api_test.http
RealisticWeatherAPI/views/: home.py
