[tool.poetry]
name = "modernfastapi"
version = "0.1.0"
description = ""
authors = ["Sagar Giri <girisagar46@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
