[tool.poetry]
name = "modernfastapi"
version = "0.1.0"
description = ""
authors = ["Sagar Giri <girisagar46@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.70.0"
uvicorn = "^0.15.0"
pydantic = "^1.8.2"
httpx = "^0.20.0"
Jinja2 = "^3.0.2"
aiofiles = "^0.7.0"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
